/*
 * Copyright (c) 2023 - 2024 drolx Solutions
 *
 * Licensed under the Business Source License 1.1 and Trace License
 * you may not use this file except in compliance with the License.
 * Change License: Reciprocal Public License 1.5
 *     https://mariadb.com/bsl11
 *     https://opensource.org/license/rpl-1-5
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Author: Godwin peter .O (me@godwin.dev)
 * Created At: Tuesday, 2nd Jan 2024
 * Modified By: Godwin peter .O
 * Modified At: Tue Jan 02 2024
 */

syntax = "proto3";

option csharp_namespace = "Trace.Service.Integration.Protocol";

package Integration;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Protocol {
  // Sends a device position
  rpc SendPosition (PositionMessage) returns (PositionResponse);

  // Get ping status
  rpc Ping (google.protobuf.Empty) returns (AckResponse);

  // Setup session
  rpc GetSession (AuthMessage) returns (AckResponse);
}

enum ResponseCode {
	OK = 0;
	UnknownError = 1;
	ProtocolError = 2;
	WrongPassword = 3;
}

message Empty { }

message PositionResponse {
  ResponseCode Status = 1;
}

message AckResponse {
  bool Completed = 1;
}

message AuthMessage {
  optional string Password = 1;
}

message PositionMessage {
  optional bool Valid = 1;
  uint32 Id = 2;
  google.protobuf.Timestamp Timestamp = 3;
  double Latitude = 4;
  double Longitude = 5;
  optional double Bearing = 6;
  optional double Altitude = 7;
  double Speed = 8;
  optional double HDOP = 9;
  optional uint32 Accuracy = 10;
  optional double Battery = 11;
  optional bool Charging = 12;
  optional uint32 Satellites = 13;
  optional uint32 TagId = 14;
}
